# dependencies_in_tests

./: Makefile  README.md  gen_requirements.sh  pyproject.toml  pytest.ini
requirements/: test_requirements.txt
tests/: test_module_a.py  test_module_b.py
